hydra/test/test_examples/type_errors/local_dec.tpc

init {
   bit<32> x = true; 
} 
telemetry {} 
check {}